examples/13_exceptions.grav
// 13 — exceptions: throw / try / catch / finally.

class AppError {
    public msg: string
    constructor(m: string) { self.msg = m; }
}
class NotFound extends AppError {
    constructor(m: string) { self.msg = m; }
}

fn lookup(id: int) -> string {
    if (id < 0) { throw new AppError("invalid id"); }
    if (id == 0) { throw new NotFound("missing"); }
    return "item-${id}";
}

fn main() {
    try {
        print(lookup(7));                 // item-7
        print(lookup(-1));                // throws
    } catch (e: AppError) {
        print("error: ${e.msg}");         // error: invalid id
    } finally {
        print("cleanup");                 // cleanup
    }

    // a subclass is caught by its base type
    try {
        let _ = lookup(0);
    } catch (e: AppError) {
        print("caught: ${e.msg}");        // caught: missing
    }
}
